Fix scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,26 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+/* =============== SCROLLBAR STYLES =============== */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 20px;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+/* =============== GENERAL STYLES =============== */
 .mat-card {
   border-radius: 20px !important;
 }
